log
Thu Apr  7 15:36:34 UTC 2022: 
 hashmap.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:24: error: ‘HashMap {aka struct HashMap}’ has no member named ‘bucket’; did you mean ‘buckets’?
     if(is_equal(map -> bucket[index]-> key, key)){
                        ^~~~~~
                        buckets
Compilation failed
7ede746
Thu Apr  7 15:37:01 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
468e364
Thu Apr  7 15:40:35 UTC 2022: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
d8d59ea
Thu Apr  7 15:40:52 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b33de7e
Thu Apr  7 15:41:46 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
69b3203
Thu Apr  7 15:43:20 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
c6e09d7
Thu Apr  7 15:43:45 UTC 2022: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
bb84a72
Thu Apr  7 15:44:13 UTC 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
920ba25
Thu Apr  7 15:44:52 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
447cb7c
Thu Apr  7 15:46:11 UTC 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|5
total_score: 20/70
08e6145
Thu Apr  7 15:46:32 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
a681f60
Thu Apr  7 15:47:18 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
cb6f1ce
Thu Apr  7 15:56:08 UTC 2022: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘searchMap’:
hashmap.c:86:9: error: lvalue required as left operand of assignment
   index = hash(key, map-> capacity);
         ^
hashmap.c:87:20: error: array subscript is not an integer
   if(map -> buckets[index] == NULL){
                    ^
hashmap.c:90:26: error: array subscript is not an integer
     return map -> buckets[index];
                          ^
Compilation failed
f3cd0dd
Thu Apr  7 15:56:34 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 30/70
0ee900a
Thu Apr  7 15:57:08 UTC 2022: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|4
total_score: 30/70
9a3cbdc
Thu Apr  7 16:00:36 UTC 2022: 
 hashmap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  5|4
total_score: 30/70
e599c4b
Thu Apr  7 16:01:44 UTC 2022: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  5|4
total_score: 30/70
793e7c8
Thu Apr  7 16:02:17 UTC 2022: 
 hashmap.c | 9 +++------
 1 file changed, 3 insertions(+), 6 deletions(-)
 tests:  6|4
total_score: 30/70
b5db18e
Thu Apr  7 16:02:44 UTC 2022: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  6|4
total_score: 30/70
4b790b2
Thu Apr  7 16:04:40 UTC 2022: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘searchMap’:
hashmap.c:90:18: error: ‘HashMap {aka struct HashMap}’ has no member named ‘bucket’; did you mean ‘buckets’?
     while(map -> bucket[index] -> key != key && map -> bucket[index] != NULL){
                  ^~~~~~
                  buckets
hashmap.c:90:56: error: ‘HashMap {aka struct HashMap}’ has no member named ‘bucket’; did you mean ‘buckets’?
     while(map -> bucket[index] -> key != key && map -> bucket[index] != NULL){
                                                        ^~~~~~
                                                        buckets
Compilation failed
2ab9a21
Thu Apr  7 16:04:51 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘searchMap’:
hashmap.c:90:18: error: ‘HashMap {aka struct HashMap}’ has no member named ‘bucket’; did you mean ‘buckets’?
     while(map -> bucket[index] -> key != key && map -> buckets[index] != NULL){
                  ^~~~~~
                  buckets
Compilation failed
ebf1122
Thu Apr  7 16:05:04 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
d30928b
Thu Apr  7 16:05:28 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c697946
Thu Apr  7 16:06:06 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘searchMap’:
hashmap.c:90:33: error: comparison of distinct pointer types lacks a cast [-Werror]
     while(map -> buckets[index] != key){
                                 ^~
cc1: all warnings being treated as errors
Compilation failed
c9f3bb6
Thu Apr  7 16:06:21 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
3e42115
Thu Apr  7 16:07:01 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ca87d22
Thu Apr  7 16:09:06 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
3a7838a
